--- a/gyms.html
+++ b/gyms.html
@@ -113,16 +113,17 @@
                     </div>
                 </div>
                 <div class="tab-pane fade" id="messages">
-                    <div class="d-flex flex-column flex-lg-row">
-                        <img src="images/database.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
-                        <div>
-                            <div class="box-icon"><span class="ti-cloud-up gradient-fill ti-3x"></span></div>
-                            <h3>Technology</h3>
+                    <div>
+                            
+                            <div><div class="box-icon"><span class="ti-cloud-up gradient-fill ti-3x"></span></div>
+                            <h3>Technology</h3></div><div class="p-1"><img src="images/database.png" alt="graphic" class="img-fluid float-right"></div><div>
                             <p class="lead">Leveraging Cloud computing and storage for climbing </p>
                             <p> With a database of climbs, your climbers and setters can refer back to past climbs at any time. Want to remember that gnarly V8 they did months ago? Now they can as a climber. What if there's a routesetter looking to set at a new place? Their profile can be used as a portfolio to show off their best works! What if your route setters have no idea what route to make next? They can browse past climbs as reference and get fun ideas!
                             </p>
+
                         </div>
                     </div>
+                    <div class="mt-3"><img src="images/database2.png" alt="graphic" class="img-fluid"></div>
                 </div>
                 <div class="tab-pane fade" id="livechat">
                     <div class="d-flex flex-column flex-lg-row">
@@ -208,7 +209,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 text-center">
                     <img src="images/iphonex2.png" alt="iphone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
                 </div>
 
@@ -325,7 +326,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 text-center text-lg-left">
-                	<div class="text-center mb-3"><img src="./images/beta.png" class="img-fluid wow fadeInLeft" style="max-height: 256px"></div>
+                	<div class="text-center mb-3"><img src="./images/beta.png" class="img-fluid" style="max-height: 256px"></div>
                     <p class="mb-2"> <span class="ti-location-pin mr-2"></span> Los Angeles, CA</p>
                     <div class=" d-block d-sm-inline-block">
                         <p class="mb-2">
