--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 text-center text-lg-left">
-                	<div class="text-center mb-3"><img src="./images/beta.png" class="img-fluid wow fadeInLeft" style="max-height: 256px"></div>
+                	<div class="text-center mb-3"><img src="./images/beta.png" class="img-fluid" style="max-height: 256px"></div>
                     <p class="mb-2"> <span class="ti-location-pin mr-2"></span> Los Angeles, CA</p>
                     <div class=" d-block d-sm-inline-block">
                         <p class="mb-2">
