--- a/gyms.html
+++ b/gyms.html
@@ -59,7 +59,7 @@
     <div class="section-title p-3 mt-3">
         <div class="container">
             <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Connecting gyms with their climbers</h2>
-            <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s">with easy to scan tags delivering beta videos and <br/>analyzable performace metrics.</p>
+            <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s">with easy to scan tags delivering beta videos and <br/>analyzable performance metrics.</p>
         </div>
      </div>
 
