--- a/gyms.html
+++ b/gyms.html
@@ -6,8 +6,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="βouldersapp™">
-    <meta name="keywords" content="climbing, gym, rock, beta, indoor">
+    <meta name="title" content="βouldersapp™"> 
+    <meta name="description" content="Rock climbing platform connecting climbers, routesetters, and gyms.">
+    <meta name="keywords" content="climbing, gym, rock, beta, indoor, app, climb">
+    <meta name="author" content="David Lac">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
