--- a/gyms.html
+++ b/gyms.html
@@ -45,7 +45,7 @@
                                 <li class="nav-item"> <a class="nav-link" href="#gallery">GALLERY</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#contact">CONTACT</a> </li>
                                 <li class="nav-item mb-2"><a href="./index.html" class="btn btn-outline-light ml-lg-3">FOR CLIMBERS</a></li>
-                                <li class="nav-item"><a href="https://touchstone.betabouldersapp.com" class="btn btn-outline-light ml-lg-3 text-white" target="_blank">DEMO</a></li>
+                                <li class="nav-item"><a href="https://main.betabouldersapp.com" class="btn btn-outline-light ml-lg-3 text-white" target="_blank">APP</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -106,8 +106,8 @@
                     <div class="d-flex flex-column flex-md-row">
                         <div>
                             <h3>Scanning FTW</h3>
-                            <p class="lead">Our system and app revolves around the idea of scanning to quickly deliver the goods. </p>
-                            <p> While the modern phone have built-in QR code scanners (iOS 11, Pixel 2, Samsung S8, etc.), we built our own blazing fast continous QR scanner into βouldersapp™. With the βouldersapp™ QR Scanner, climbers can scan routes they did and save it to their accounts or use it to navigate directly to the climb's page where they can checkout the solution and beta.
+                            <p class="lead">Our system revolves around the idea of scanning to quickly deliver the goods. </p>
+                            <p> With any QR Scanner, climbers can scan routes they completed to save it to their accounts or to navigate directly to the climb's page where they can checkout the solution and beta.
                             </p>
                             <img src="./images/dashboardicon.png" style="width: 180px">
                         </div>
@@ -294,7 +294,7 @@
                 </div>
                 <div class="col-md-6">
                     <h4 class="mb-3">Are there options for customization or have our own gym app?</h4>
-                    <p class="light-font mb-5">We can spin a server up for your own gym to have it highly customizable. However, that plan exists of our offered priced plans, so contact us to see what can be done. </p>
+                    <p class="light-font mb-5">We can spin a server up for your own gym to have it highly customizable. However, that option exists outside our offered priced plans, so please contact us to see what can be done. </p>
                 </div>
             </div>
         </div>
