--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <li class="nav-item"> <a class="nav-link" href="#gallery">GALLERY</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#contact">CONTACT</a> </li>
                                 <li class="nav-item mb-2"><a href="./gyms.html" class="btn btn-outline-light ml-lg-3">FOR GYMS</a></li>
-                                <li class="nav-item"><a href="https://touchstone.betabouldersapp.com" class="btn btn-outline-light ml-lg-3 text-white" target="_blank">DEMO</a></li>
+                                <li class="nav-item"><a href="https://main.betabouldersapp.com" class="btn btn-outline-light ml-lg-3 text-white" target="_blank">APP</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -60,8 +60,8 @@
 
     <div class="section-title p-3 mt-3">
         <div class="container">
-            <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Get (beta) Sprayed. 💦</h2>
-            <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s"><span style="font-weight: 800">βoulders</span><span style="font-size: 16px;font-weight: 800">app™</span> is the app rock climbers wished for. Get the solution (beta) to your bouldering routes, track progress, and join the community!</p>
+            <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Share Beta. Track Progress. Build Community.</h2>
+            <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s">The app rock climbers wished for. Get the solution (beta) to your bouldering routes and more!</p>
         </div>
      </div>
 
@@ -82,7 +82,7 @@
                                 <span class="ti-download gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">No Downloads</h4>
-                                    <p class="card-text">This is a web app accessible by anyone with internet. Access the main application and track your progress through multiple participating gyms.</p>
+                                    <p class="card-text">Accessible by anyone with internet. Scan the βTag™ or go to the main application view beta and track your progress at participating gyms.</p>
                                 </div>
                             </div>
                         </div>
@@ -108,7 +108,7 @@
                                 <span class="ti-user gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">1 App, All Climbing Gyms</h4>
-                                    <p class="card-text">Join the community! Tick climbs and track your progress with our visualization tools. Share your climbs, progress, and your beta with friends too! </p>
+                                    <p class="card-text">Join the community! Tick climbs and track your progress with our visualization tools. Share your climbs, progress, and your beta with friends! </p>
                                 </div>
                             </div>
                         </div>
@@ -129,8 +129,8 @@
                 <div class="col-lg-6 offset-lg-6 animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.3s">
                     <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                     <h2>The first of its kind.</h2>
-                    <p class="mb-4">There's no other application tailored made for climbers and developed and marketed by climbers that allows users to quickly track progress and get beta for free. Use βouldersapp™ to check into your climbing gym and start tracking your climbs!</p>
-                    <a href="https://touchstone.betabouldersapp.com" class="btn btn-primary">Check it Out!</a>
+                    <p class="mb-4">There's no other application tailored made for climbers and developed and marketed by climbers that allows users to quickly track progress and get beta for free. Use βouldersapp™ to check into your climbing gym and start tracking your climbs and seeing beta when you need it!</p>
+                    <a href="https://main.betabouldersapp.com/climbs" class="btn btn-primary">Check it Out!</a>
                 </div>
             </div>
             <div class="perspective-phone">
